tools/tests/errors/surf_cont_04.experr
slice step cannot be zero
